[package]
name = "enum-query-params-reqwest"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Test spec for enum and non-primitive query parameters"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "query", "form"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "^1.46.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
